src/test/deca/syntax/invalid/created/miscellaneous/bad_if1.deca
// Description :
//    if sans les parenthèse de la condition
//
// Resultats :
//		Syntaxe error

{
if {
}
}